--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/wabu_star"
+        android:icon="@mipmap/ic_wabu_star"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/wabu_star"
+        android:roundIcon="@mipmap/ic_wabu_star_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StationQuiz">
         <activity
